@@ -25,7 +25,7 @@
   },
   "extra": {
     "roundcube": {
-      "min-version": "1.0-beta"
+      "min-version": "1.1-beta"
     }
   }
 }
