@@ -1,6 +1,7 @@
 Roundcube Webmail SieveRules
 ============================
 
+ * Update to TinyMCE 4 (731d190)
  * Add support for :matches
  * Drop IE6 support
 
